<resources>
    <string name="app_name">Albums</string>
    <string name="menu_add">Add</string>
    <string name="search_hint">Search all albums (person=Ada AND location=Paris)</string>
    <string name="search_no_results">No photos matched that query</string>
    <string name="search_invalid_query">Use key=value, optionally with one AND or OR</string>
    <string name="create_album_title">Create Album</string>
    <string name="album_name_empty">Album name cannot be empty</string>
    <string name="album_name_exists">An album with that name already exists</string>
    <string name="album_not_found">Album not found</string>
    <string name="album_renamed">Album renamed</string>
    <string name="photo_already_in_album">Photo already exists in the album</string>
    <string name="photo_not_found">Photo not found</string>
    <string name="photo_content_description">Album photo %1$d</string>
    <string name="current_photo_content_description">Current photo</string>
    <string name="no_tags">This photo has no tags</string>
    <string name="remove_tag_title">Select a tag to remove</string>
    <string name="add_tag_title">Add Tag</string>
    <string name="tag_value_hint">Value</string>
    <string name="add">Add</string>
    <string name="tag_invalid">Tag key must be person or location, and value cannot be empty</string>
    <string name="no_more_photos">No more photos in the album</string>
    <string name="move_photo_title">Move photo to album</string>
    <string name="no_albums">No albums available</string>
    <string name="delete_album">Delete Album</string>
    <string name="add_photo">Add Photo</string>
    <string name="rename">Rename</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="remove_tag">Remove Tag</string>
    <string name="add_tag">Add Tag</string>
    <string name="move">Move</string>
    <string name="delete">Delete</string>
    <string name="back">Back</string>
    <string name="album_name">Album name</string>
</resources>
