<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/display_photo_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/blue"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <Button
        android:id="@+id/add_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/add_tag"
        app:layout_constraintBottom_toBottomOf="@id/display_photo_toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/display_photo_toolbar" />

    <Button
        android:id="@+id/remove_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/remove_tag"
        app:layout_constraintBottom_toBottomOf="@id/display_photo_toolbar"
        app:layout_constraintStart_toEndOf="@id/add_tag"
        app:layout_constraintTop_toTopOf="@id/display_photo_toolbar" />

    <Button
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="@id/display_photo_toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/display_photo_toolbar" />

    <ImageView
        android:id="@+id/photo_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/current_photo_content_description"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/tags_scrollview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/display_photo_toolbar" />

    <ScrollView
        android:id="@+id/tags_scrollview"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toTopOf="@id/delete_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tags_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp" />
    </ScrollView>

    <Button
        android:id="@+id/prev_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toTopOf="@id/delete_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/next_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/next"
        app:layout_constraintBottom_toTopOf="@id/move_button"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/move_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/move"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
